--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,57 @@
+.aboutdiv {
+  width: 45vw;
+  height: 700px;
+  word-wrap: break-word;
+  font-family: "Monaco", Times, serif;
+  font-size: 1.2em;
+}
+.blockparagraph {
+  margin-top: 20px;
+}
+.btn {
+  margin-left: 10px;
+  margin-right: 10px;
+  background-color: orange;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  border: 0;
+  background-image: url("/refresh.png");
+  background-position: center center;
+  display: block;
+}
+.btn:hover {
+  opacity: 0.5;
+}
+.card {
+  margin: 10px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  width: 20vw;
+}
+.cardrow {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.cardBody {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 20px;
+  min-height: 250px;
+}
+.cardBody a {
+  text-decoration: none;
+}
+.cardHeader img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
 .container {
   color: white;
   padding: 0 0.5rem;
@@ -5,8 +59,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  width: 200px;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  width: 300px;
   font-size: 1.2em;
 }
 .location{
@@ -14,7 +67,8 @@
   color: white;
   height: 90vh;
   align-items: flex-end;
-  font-family: "Monaco", Times, serif;;
+  font-family: "Monaco", Times, serif;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 .navbar {
   margin-left: 50px;
@@ -22,16 +76,58 @@
   display: flex;
   flex-direction: row;
 }
+.projectstitle{
+  font-family: "Monaco", Times, serif;
+  font-size: 2em;
+  margin-right: 5px;
+  align-items: flex-end;
+  font-weight: bold;
+  text-align: center;
+  margin-top: none;
+}
 .projlayout {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  width: 100vw;
+  justify-content: center;
+}
+.scroll {
+    position: absolute;
+    bottom: 1vh;
+    right: 54%;
+    max-height: 10%;
+    color: black;
+}
+.tag {
+  background: #cccccc;
+  border-radius: 50px;
+  font-size: 12px;
+  margin: 0;
+  color: #fff;
+  padding: 2px 10px;
+  text-transform: uppercase;
+  cursor: pointer;
 }
 .title {
-  color: white;
   font-family: Garamond;
   font-size: 2em;
   margin-right: 5px;
   align-items: flex-end;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   font-weight: bold;
+}
+.user {
+  display: flex;
+  margin-top: auto;
+}
+.user img {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+.userInfo h5 {
+  margin: 0;
+}
+.userInfo small {
+  color: #545d7a;
 }
