--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -47,7 +47,7 @@
 .cardBody a {
   text-decoration: none;
 }
-.cardHeader img {
+.cardHeader div {
   width: 100%;
   height: 200px;
   object-fit: cover;
@@ -119,7 +119,7 @@
   display: flex;
   margin-top: auto;
 }
-.user img {
+.user span {
   border-radius: 50%;
   width: 40px;
   height: 40px;
